--- a/modules/sub-modules/templates/vault_config/init_license.yml.tmpl
+++ b/modules/sub-modules/templates/vault_config/init_license.yml.tmpl
@@ -31,7 +31,7 @@ function install_vault_license () {
 curl -s --request PUT --header "X-Vault-Token: $1" --data @/home/ubuntu/_vaultSetup/license.json https://127.0.0.1:8200/v1/sys/license
 
 if [ $? -eq 0 ]
-then 
+then
     #rm /home/ubuntu/_vaultSetup/license.json
      echo "Writing license file IS successful"
 else
@@ -43,17 +43,17 @@ fi
 sleep 10
 
 # Check if Vault is ready for being licensed
-while true 
-do 
-  if [[ $(curl -LI -o /dev/null -w '%%{http_code}' -s https://127.0.0.1:8200/v1/sys/health) =~ (200|429|473) ]] # HTTP codes that show if Vault is ready to be used
+while true
+do
+  if [[ $(curl -X GET -LI -o /dev/null -w '%%{http_code}' -s https://127.0.0.1:8200/v1/sys/health) =~ (200|429|473) ]] # HTTP codes that show if Vault is ready to be used
   then
     # Checking if Vault is using autoloading license (version > 1.8) if 404 is returned, autoload is not used, so installing the license via /sys/license endpoint
-    if [[ $(curl -H "X-Vault-Token: $ROOT_TOKEN" -o /dev/null -w '%%{http_code}' -s https://127.0.0.1:8200/v1/sys/license/status) =~ (404) ]]
+    if [[ $(curl -X GET -H "X-Vault-Token: $ROOT_TOKEN" -o /dev/null -w '%%{http_code}' -s https://127.0.0.1:8200/v1/sys/license/status) =~ (404) ]]
     then
       install_vault_license $ROOT_TOKEN
       break 2
     # If autoloading license is used, break from the loop
-    elif [[ $(curl -LI -H "X-Vault-Token: $ROOT_TOKEN" -o /dev/null -w '%%{http_code}' -s https://127.0.0.1:8200/v1/sys/license/status) =~ (200) ]]
+    elif [[ $(curl -X GET -LI -H "X-Vault-Token: $ROOT_TOKEN" -o /dev/null -w '%%{http_code}' -s https://127.0.0.1:8200/v1/sys/license/status) =~ (200) ]]
     then
       break 2
     fi
