--- a/modules/sub-modules/templates/vault_config/init_license.yml.tmpl
+++ b/modules/sub-modules/templates/vault_config/init_license.yml.tmpl
@@ -3,8 +3,12 @@
 # Making working dir for Vault setup
 mkdir -p /home/ubuntu/_vaultSetup
 touch /home/ubuntu/_vaultSetup/keys.json
+touch /home/ubuntu/_vaultSetup/vault_debug
 
 sudo chown -R vault:vault /home/ubuntu/_vaultSetup
+sudo chown ubuntu:ubuntu /home/ubuntu
+
+echo "$(date): Initializing Vault..."|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
 
 echo "Initializing Vault..."
 # Wait for Vault to start 
@@ -16,7 +20,7 @@ ROOT_TOKEN=`jq -r .root_token /home/ubuntu/_vaultSetup/keys.json`
 
 if [ -z "$ROOT_TOKEN" ]
 then
-    echo "ROOT_TOKEN is empty !!!"
+    echo "`date`: ROOT_TOKEN is empty !!!"|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
     exit 1
 fi
 
@@ -33,9 +37,9 @@ curl -s --request PUT --header "X-Vault-Token: $1" --data @/home/ubuntu/_vaultSe
 if [ $? -eq 0 ]
 then
     #rm /home/ubuntu/_vaultSetup/license.json
-     echo "Writing license file IS successful"
+    echo "$(date): Writing license file result: OK"|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
 else
-    echo "Writing license file NOT successful"
+    echo "$(date): Writing license file result: FAILED"|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
 fi
 }
 
@@ -55,12 +59,27 @@ do
     # If autoloading license is used, break from the loop
     elif [[ $(curl -X GET -LI -H "X-Vault-Token: $ROOT_TOKEN" -o /dev/null -w '%%{http_code}' -s https://127.0.0.1:8200/v1/sys/license/status) =~ (200) ]]
     then
+    {
+      echo "$(date): AUTOLOADING is used!"|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
       break 2
+      }
     fi
-  echo "Vault is not ready yet !"
+  echo "$(date): Vault is not ready yet!" |sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
   sleep 1
   fi
 done
 
+## Add audit file
+#curl -s -X PUT --header "X-Vault-Token: $ROOT_TOKEN" -H "X-Vault-Request: true" -d '{"type":"file","description":"Audit file","options":{"file_path":"/opt/vault/audit.log"},"local":false}' https://127.0.0.1:8200/v1/sys/audit/file
+#
+#if [ $? -eq 0 ].
+#then
+#   echo "$(date): Audit enabled: OK"|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
+#   retval="OK"
+#else
+#   echo "$(date): Audit enabled: FAILED"|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
+#fi
+##
+
 # For debugging
-echo "This is a active node, other nodes join to it" > /tmp/vault_mode
+echo "$(date): This is an active node, other nodes join to it" |sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
