--- a/modules/sub-modules/templates/vault_config/join_license.yml.tmpl
+++ b/modules/sub-modules/templates/vault_config/join_license.yml.tmpl
@@ -5,4 +5,4 @@
 # No need to write the license to each node, it is stored in the backend storage
 
 # Debugging purposes
-echo "$(date): This is a follower node. It will join the active node." |sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
+echo "$(date) - This is a follower node, it joins to active node" s|sudo tee -a /home/ubuntu/_vaultSetup/vault_debug
